--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_USER: "kong"
       POSTGRES_DB: "kong"
-      POSTGRES_PASSWORD: "kong"
+      POSTGRES_PASSWORD: "kongpass"
     ports:
       - "5432:5432"
   kong-bootstrap:
@@ -20,7 +20,7 @@ services:
       KONG_PG_HOST: "kong-database"
       KONG_PG_DATABASE: "kong"
       KONG_PG_USER: "kong"
-      KONG_PG_PASSWORD: "kong"
+      KONG_PG_PASSWORD: "kongpass"
     command: "kong migrations bootstrap"
     restart: 'on-failure'
   kong:
@@ -35,16 +35,18 @@ services:
       KONG_PG_HOST: "kong-database"
       KONG_PG_DATABASE: "kong"
       KONG_PG_USER: "kong"
-      KONG_PG_PASSWORD: "kong"
+      KONG_PG_PASSWORD: "kongpass"
       KONG_PROXY_ACCESS_LOG: '/dev/stdout'
       KONG_ADMIN_ACCESS_LOG: '/dev/stdout'
       KONG_PROXY_ERROR_LOG: '/dev/stderr'
       KONG_ADMIN_ERROR_LOG: '/dev/stderr'
       KONG_ADMIN_LISTEN: "0.0.0.0:8001"
+      KONG_ADMIN_GUI_URL: "http://localhost:8002"
       
     command: "kong start"
     ports:
       - "8000:8000"
+      - "8002:8002"
       - "8443:8443"
       - "8001:8001"
       - "8444:8444"
