--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,23 +31,21 @@ services:
     environment:
       KONG_DATABASE: "postgres"
       KONG_PG_HOST: "kong-database"
-      KONG_PG_DATABASE: "kong"
       KONG_PG_USER: "kong"
       KONG_PG_PASSWORD: "kongpass"
       KONG_PROXY_ACCESS_LOG: '/dev/stdout'
       KONG_ADMIN_ACCESS_LOG: '/dev/stdout'
       KONG_PROXY_ERROR_LOG: '/dev/stderr'
       KONG_ADMIN_ERROR_LOG: '/dev/stderr'
-      KONG_ADMIN_LISTEN: "0.0.0.0:8001"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
       KONG_ADMIN_GUI_URL: "http://localhost:8002"
-      
-    command: "kong start"
     ports:
       - "8000:8000"
       - "8002:8002"
       - "8443:8443"
       - "8001:8001"
       - "8444:8444"
+
 networks:
   default:
     name: kong-net
